<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/displayBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/display" />

        <EditText
            android:id="@+id/enterText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:hint="@string/enter_text"
            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:id="@+id/enterDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_text" />

    <RadioGroup
        android:id="@+id/RadioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioMale" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioFemale" />
    </RadioGroup>

    <ToggleButton
        android:id="@+id/toggleButtonEnabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/enabled"
        android:textOff="@string/disabled"
        />

</LinearLayout>